<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ffmpeg_trial</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="select">Select</string>
    <string name="input_select">Choose input:</string>
    <string name="input">Input:</string>
    <string name="output">output:</string>
    <string name="fps">FPS:</string>
    <string name="width">Width:</string>
    <string name="height">Height:</string>
    <string name="start">Start</string>
	<string name="off_process_signal">Not Processing</string>
	<string name="on_process_signal">Processing...</string>
</resources>
